{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 66,
  "lineage": "a6182ccd-e52d-f296-1bb3-3c2d2e49cb42",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:025381531841:subnet/subnet-0d3ce36d7c26b3221",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0d3ce36d7c26b3221",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "025381531841",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a93f62cd91ba7ca5"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:025381531841:subnet/subnet-04fee36178912854b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-04fee36178912854b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "025381531841",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a93f62cd91ba7ca5"
          },
          "dependencies": [
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:025381531841:vpc/vpc-0a93f62cd91ba7ca5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-02d0ee8703259372a",
            "default_route_table_id": "rtb-07cd0c7ca1758aa1e",
            "default_security_group_id": "sg-0af758bcf59a0e5f7",
            "dhcp_options_id": "dopt-0cd7644a48b5bed57",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": false,
            "force_destroy": false,
            "id": "vpc-0a93f62cd91ba7ca5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07cd0c7ca1758aa1e",
            "owner_id": "025381531841",
            "tags": {
              "Name": "default vpc"
            },
            "tags_all": {
              "Name": "default vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_rds_mssql_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:025381531841:security-group/sg-048bbd2d2b81062af",
            "description": "enable mssql access on port 1433",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048bbd2d2b81062af",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "mssql access",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-011164ae261640f11"
                ],
                "self": false,
                "to_port": 1433
              }
            ],
            "name": "tf rds mssql security group",
            "name_prefix": "",
            "owner_id": "025381531841",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tf rds mssql security group"
            },
            "tags_all": {
              "Name": "tf rds mssql security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a93f62cd91ba7ca5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default_vpc",
            "aws_security_group.webserver_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:025381531841:security-group/sg-011164ae261640f11",
            "description": "enable http access on port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011164ae261640f11",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver security group",
            "name_prefix": "",
            "owner_id": "025381531841",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver security group"
            },
            "tags_all": {
              "Name": "webserver security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a93f62cd91ba7ca5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default_vpc"
          ]
        }
      ]
    }
  ]
}